--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,10 @@
         tools:context=".ui.main.MainActivity">
 
         <fragment
-            android:id="@+id/fragMap"
-            android:name="com.vadim.iqosmap.ui.map.MapFragment"
+            android:id="@+id/navFragment"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/navigation_main"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
