--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#29b6f6</color>
     <color name="colorPrimaryDark">#0086c3</color>
-    <color name="colorAccent">@color/white</color>
+    <color name="colorAccent">#29b6f6</color>
 
     <color name="white">@android:color/white</color>
     <color name="black">@android:color/black</color>
