--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">localhost:8081</domain>
         <domain includeSubdomains="true">localhost</domain>
+        <domain includeSubdomains="true">3.122.252.144</domain>
     </domain-config>
 </network-security-config>
