--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,24 +10,47 @@
             type="com.vadmax.iqosmap.ui.main.MainViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/clRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.main.MainActivity">
 
-        <fragment
-            android:id="@+id/navFragment"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/navigation_main"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout="@layout/fragment_map" />
+        <FrameLayout
+            android:id="@+id/navHostContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.vadmax.iqosmap.view.CurvedBottomNavigationView
+            android:id="@+id/bottomNavigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:clickable="true"
+            android:focusable="true"
+            app:fab_cradle_rounded_corner_radius="@dimen/fab_cradle_rounded_corner_radius"
+            app:fab_size="@dimen/fab_main_size"
+            app:fab_cradle_margin="@dimen/fab_cradle_margin"
+            app:elevation="6dp"
+            android:clipToPadding="false"
+            app:itemIconTint="@color/selector_bottom_navigation_view"
+            app:itemTextColor="@color/selector_bottom_navigation_view"
+            app:labelVisibilityMode="labeled"
+            app:menu="@menu/menu_main">
+
+        </com.vadmax.iqosmap.view.CurvedBottomNavigationView>
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabFilter"
+            android:layout_width="@dimen/fab_main_size"
+            android:layout_height="@dimen/fab_main_size"
+            android:tint="@color/white"
+            app:layout_anchor="@id/bottomNavigation"
+            app:layout_anchorGravity="fill_vertical|center_horizontal"
+            app:elevation="8dp"
+            app:fabSize="normal" />
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
