--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -16,17 +17,29 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.MainActivity">
 
-        <fragment
-            android:id="@+id/navFragment"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/navigation_main"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/advHeader"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/google_ads_banner_id"/>
+
+        <fragment
+            android:id="@+id/navFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/advHeader"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/navigation_main"
             tools:layout="@layout/fragment_map" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
